[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ExamplePipelineSource"
version = "1.0"
description = "An example for a Python-based pipeline source for OVITO"
keywords = ["ovito"]
authors = [{name = "Alexander Stukowski", email = "stukowski@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.2",
]

[project.urls]
repository = "https://github.com/stukowski/ExamplePipelineSource"

[project.entry-points.'OVITO.Modifier']
"Example Pipeline Source" = "ExamplePipelineSource:ExamplePipelineSource"

[tool.setuptools.packages.find]
where = ["src"]