[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ExampleViewportOverlay"
version = "1.0"
description = "An example for a Python-based viewport layer for OVITO"
keywords = ["ovito"]
authors = [{name = "Alexander Stukowski", email = "stukowski@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.2",
]

[project.urls]
repository = "https://github.com/stukowski/ExampleViewportOverlay"

[project.entry-points.'OVITO.ViewportOverlay']
"Example Viewport Overlay" = "ExampleViewportOverlay:example_render_function"

[tool.setuptools.packages.find]
where = ["src"]